[package]
name = "cargo-build-deps"
version = "0.1.4"
edition = "2018"
authors = ["Nick Cardin <nick@cardin.email>"]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/nacardin/cargo-build-deps"
description = """
A cargo subcommand to build dependencies, helps speed up docker builds by 
allowing dependencies to be built earlier and cached.
"""
readme = "README.md"

[dependencies]
structopt = "0.2"
serde_json = "1.0"
toml = "0.5.0"
semver = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
